--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <h1 class="navbar-brand fs-1">Миссия Колонизация Марса</h1>
+        <div class="d-flex">
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
+            {% else %}
+                <p>
+                    <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                    <a class="btn btn-success" href="/login">Войти</a>
+                </p>
+            {% endif %}
+        </div>
     </div>
 </nav>
 <div class="container-fluid">
