--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <a class="btn btn-secondary" href="/addjob">Добавить работу</a>
     {% for item in jobs %}
         <div class="jobs-item my-3">
-            <h3>Action №{{ item.id }}</h3>
+            <h3>Работа №{{ item.id }}</h3>
             <table class="table mb-1">
                 <thead>
                     <tr>
