--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h2 class="text-center">{{ title }}</h2>
+    <a class="btn btn-secondary" href="/departments">Департаменты</a>
     <a class="btn btn-secondary" href="/addjob">Добавить работу</a>
     {% for item in jobs %}
         <div class="jobs-item my-3">
