Database city_from field

--- a/templates/register.html
+++ b/templates/register.html
@@ -90,6 +90,15 @@
                 </div>
             {% endfor %}
         </div>
+        <div class="mb-4">
+            {{ form.city_from.label(class="form-label") }}
+            {{ form.city_from(class="form-control") }}
+            {% for error in form.city_from.errors %}
+                <div class="alert alert-danger mt-1" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </div>
         {{ form.submit(class="btn btn-primary mb-2") }}
     </form>
 {% endblock %}
